feat: Initialize web application with transaction management, expense analytics, and chat features, while removing old documentation files.

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
                 <button id="refresh-page-btn" class="icon-btn" onclick="location.reload()" title="Refresh Page">
                     <i class="ph ph-arrows-clockwise"></i>
                 </button>
-                <button id="chat-btn" class="icon-btn" onclick="app.navigate('chat')" title="Chat">
+                <button id="chat-btn" class="icon-btn" onclick="app.toggleChat()" title="Chat">
                     <i class="ph ph-chat-circle"></i>
                 </button>
                 <button id="theme-toggle" class="icon-btn" onclick="app.toggleTheme()" title="Toggle Theme">
